<resources>
    <string name="app_name">川科企业云</string>
    <string name="logo_title">川科企业云管理平台系统</string>
    <string name="public_belong">成都川大川科网络信息有限公司  版权所有</string>
    <string name="user_hint">请输入用户名</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="delete">删除</string>
    <string name="add">新增</string>
    <string name="search">搜索</string>
    <string name="text_return">返回</string>
    <string name="text_clean">重置</string>
    <string name="select_time">请选择时间</string>
    <string name="time">时间</string>
    <string name="start_stop_time">起止时间</string>
    <string name="text">—</string>
    <string name="text_two">——</string>
    <string name="me">我</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登  录</string>
    <string name="my_job">我的工作</string>
    <string name="my_message">我的信息</string>
    <string name="my_check">我的考勤</string>
    <string name="my_leave">我的请假</string>
    <string name="my_mission">我的任务</string>
    <string name="my_maintain">我的运维</string>
    <string name="my_post">我的日报</string>
    <string name="overtime">我的加班</string>
    <string name="travel">我的出差</string>
    <string name="my_memo">备忘录</string>
    <string name="my_bug">我的bug</string>
    <string name="my_usecase">我的用例</string>
    <string name="public_query">公共查询</string>
    <string name="project_query">项目查询</string>
    <string name="project_plan_query">任务查询</string>
    <string name="project_list">通信录</string>
    <string name="project_memberlist">成员列表</string>
    <string name="usecase_query">用例查询</string>
    <string name="bug_query">bug查询</string>
    <string name="bottom_menu_home_bar">首页</string>
    <string name="bottom_menu_addresslist_bar">通讯录</string>
    <string name="bottom_menu_custom_bar">客户</string>
    <string name="bottom_menu_about_bar">关于</string>
    <string name="query">查询</string>
    <string name="edit">修改</string>
    <string name="save">保存</string>
    <string name="query_erro">查询失败</string>
    <string name="work_sign">上班考勤</string>
    <string name="work_off_sign">下班考勤</string>
    <string name="user_name_not_exist">用户名不存在</string>
    <string name="password_error">密码错误</string>
    <string name="leader">我是领导</string>
    <string name="post_query">日报查询</string>
    <string name="check_query">考勤查询</string>
    <string name="travel_record_query">出差查询</string>
    <string name="overtime_record_query">加班查询</string>
    <string name="check_date">考勤日期</string>
    <string name="check_deal">考勤处理</string>
    <string name="leave_deal">请假处理</string>
    <string name="leave_search">请假筛选</string>
    <string name="overtime_deal">加班处理</string>
    <string name="travel_deal">出差处理</string>
    <string name="save_edit">保存修改</string>
    <string name="check_begin_time">考勤开始时间</string>
    <string name="choose_time">点击选择时间</string>
    <string name="early_min">早退分钟数</string>
    <string name="late_min">迟到分钟数</string>
    <string name="overtime_status">加班状态</string>
    <string name="project_manager">项目</string>
    <string name="project_manage">项目管理</string>
    <string name="project_memo">通讯录</string>
    <string name="pm_contact">项目通讯录</string>
    <string name="project_member_manage">成员管理</string>
    <string name="project_mission_manage">计划管理</string>
    <string name="bug_manage">bug处理</string>
    <string name="project_usecase">项目用例</string>
    <string name="project_content">项目内容</string>
    <string name="pm_customer_company_name">甲方单位名称</string>
    <string name="pm_customer_contactor_phone">联系电话</string>
    <string name="manage_member">项目成员管理</string>
    <string name="member_name_hint">请输入员工名</string>
    <string name="mem_name">成员姓名</string>
    <string name="member_res">职责</string>
    <string name="role">身份</string>
    <string name="memo">我的备忘录</string>
    <string name="memo_title">标题</string>
    <string name="memo_title_textview">备忘录标题</string>
    <string name="memo_hint_content">请输入内容</string>
    <string name="input_memo_title">请输入备忘录标题</string>
    <string name="memo_choose">备忘录筛选</string>
    <string name="memo_date_textview">xx年xx月xx日</string>
    <string name="memo_content">内容</string>
    <string name="memo_content_textview">请输入备忘录内容</string>
    <string name="new_memo">新增备忘录</string>
    <string name="delete_memo">删除备忘录</string>
    <string name="submit_time">提交时间</string>
    <string name="check_end_time">考勤结束时间</string>
    <string name="employer_name">员工姓名</string>
    <string name="head">头像</string>
    <string name="user_name">用户名</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入姓名</string>
    <string name="sex">性别</string>
    <string name="phone">手机</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="qq">QQ</string>
    <string name="input_qq">请输入QQ号码</string>
    <string name="wechat">微信</string>
    <string name="input_wechat">请输入微信号</string>
    <string name="email">邮箱</string>
    <string name="input_email">请输入邮箱</string>
    <string name="location">地址</string>
    <string name="input_location">请输入所在城市</string>
    <string name="detail_location">详细地址</string>
    <string name="input_detail_location">请输入详细地址</string>
    <string name="idcard">身份证号码</string>
    <string name="comp_name">公司名称</string>
    <string name="punch_address">考勤地址</string>
    <string name="puncher_master">考勤主管</string>
    <string name="join_time">入职时间</string>
    <string name="is_exception">是否考勤</string>
    <string name="service_state">在职状态</string>
    <string name="job">职务</string>
    <string name="duty">上班</string>
    <string name="offduty">下班</string>
    <string name="check_time">考勤时间</string>
    <string name="check_choose">考勤筛选</string>
    <string name="check_detail">考勤详情</string>
    <string name="dutytime">上班时间</string>
    <string name="offdutytime">下班时间</string>
    <string name="project">项目</string>
    <string name="check_location">考勤点</string>
    <string name="check_manager">考勤</string>
    <string name="stipulate_dutytime">规定上班时间</string>
    <string name="stipulate_offdutytime">规定下班时间</string>
    <string name="duty_sign_time">上班签到时间</string>
    <string name="offduty_sign_time">下班签到时间</string>
    <string name="duty_manage_time">上班处理时间</string>
    <string name="offduty_manage_time">下班处理时间</string>
    <string name="manage_state">处理状态</string>
    <string name="leave">请假</string>
    <string name="work_overtime">加班</string>
    <string name="work_travel">出差</string>
    <string name="late">迟到</string>
    <string name="leave_early">早退</string>
    <string name="leave_record_query">请假查询</string>
    <string name="leave_record_detail">请假详情</string>
    <string name="apply_time">申请时间</string>
    <string name="apply_leave">申请请假</string>
    <string name="leave_time">请假时间</string>
    <string name="leave_type">请假类型</string>
    <string name="leave_begin_time">请假开始时间</string>
    <string name="leave_end_time">请假结束时间</string>
    <string name="leave_reason">请假原因</string>
    <string name="input_leave_reason">请输入请假原因</string>
    <string name="leave_apply">请假申请</string>
    <string name="commit_apply">提交申请</string>
    <string name="time_erro">请重新选择结束时间</string>
    <string name="dispose_suggestion">处理意见</string>
    <string name="input_dispose_suggestion">请输入处理意见</string>
    <string name="dispose_time">处理时间</string>
    <string name="leave_state">请假状态</string>
    <string name="mission_member">任务成员</string>
    <string name="mission_name">任务名称</string>
    <string name="mission_detail">任务详情</string>
    <string name="mission_add">任务新增</string>
    <string name="mission_edit">任务编辑</string>
    <string name="mission_choose">任务筛选</string>
    <string name="input_mission_name">请输入任务名称</string>
    <string name="mission_content">任务内容</string>
    <string name="input_mission_content">请输入任务内容</string>
    <string name="mission_level">任务优先级</string>
    <string name="mission_content_details">任务内容说明</string>
    <string name="mission_begin_time">任务开始时间</string>
    <string name="mission_end_time">任务结束时间</string>
    <string name="mission_progress">任务完成进度</string>
    <string name="input_mission_progress">请输入任务进度</string>
    <string name="mission_state">任务状态</string>
    <string name="evaluate">评价</string>
    <string name="input_evaluate">请输入评价内容</string>
    <string name="edit_error">修改失败</string>
    <string name="schedule">进度</string>
    <string name="schedule_add">任务进度新增</string>
    <string name="mission_schedlue">任务进度</string>
    <string name="pmsch_time">生成时间</string>
    <string name="trip_status">出差状态</string>
    <string name="trip_addr">出差地址</string>
    <string name="trip_detail_addr">出差详细地址</string>
    <string name="usecase_number">用例编号</string>
    <string name="version_number">程序版本</string>
    <string name="text_man">测试人员</string>
    <string name="exploit_man">开发人员</string>
    <string name="autorized_time">编制时间</string>
    <string name="contact_name">甲方姓名</string>
    <string name="project_state">运维状态</string>
    <string name="operation_details">运维详情</string>
    <string name="operation_man">运维负责人</string>
    <string name="contact_mob">联系电话</string>
    <string name="contact">联系方式</string>
    <string name="goon_technical">运维技术负责人</string>
    <string name="goon_business">运维客服负责人</string>
    <string name="goon_time">运维开始时间</string>
    <string name="goon_actual_start_time">运维实际开始时间</string>
    <string name="goon_actual_end_time">运维实际结束时间</string>
    <string name="todo_time">开发开始时间</string>
    <string name="contact_posistion">联系人职务</string>
    <string name="contact_company">联系人公司</string>
    <string name="functionModule">功能模块</string>
    <string name="bug_version">bug等级</string>
    <string name="bug_search">bug筛选</string>
    <string name="bug_state">bug状态</string>
    <string name="found_time">发现时间</string>
    <string name="bug_number">bug序号</string>
    <string name="bug_content">bug内容</string>
    <string name="input_bug_content">请输入bug内容</string>
    <string name="operation_mode">操作模式</string>
    <string name="entrance_mode">进入方式</string>
    <string name="project_name_edittext">项目名称</string>
    <string name="input_project_name">请输入项目名称</string>
    <string name="project_choose">项目筛选</string>
    <string name="project_manager_edittext">项目主管</string>
    <string name="project_begin_time_textview">开始时间</string>
    <string name="project_end_time_textview">结束时间</string>
    <string name="plan_create_time">创建时间</string>
    <string name="plan_manager_name_edittext">安排人员</string>
    <string name="project_mission_priority">优先级</string>
    <string name="project_mission_state">项目状态</string>
    <string name="usecase_id">用例编号</string>
    <string name="input_usecase_id">请输入用例编号</string>
    <string name="usecase_choose">用例筛选</string>
    <string name="usecase_program_number">程序版本</string>
    <string name="input_usecase_program_number">请输入程序版本号</string>
    <string name="usecase_tester">测试人员</string>
    <string name="usecase_developer">开发人员</string>
    <string name="usecase_formation_time">编制时间</string>
    <string name="my_mission_name">任务名称</string>
    <string name="employer_travel_time">出差时间</string>
    <string name="travel_add">出差安排</string>
    <string name="employer_back_time">回程时间</string>
    <string name="employer_travel_add">出差地址</string>
    <string name="employer_travel_address">出差详细地址</string>
    <string name="input_travel_reason">请输入出差原因</string>
</resources>