<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Parent_LayoutStyle"
    tools:context=".usecase.publicSearchUseCase.UsecaseFragment">

    <LinearLayout style="@style/Toptitle_LayoutStyle">

        <TextView
            style="@style/toptextview_left"
            android:text="@string/text_return" />

        <TextView
            style="@style/toptextview_center"
            android:text="@string/usecase_choose" />

        <TextView
            style="@style/topview_right"
            android:text="@string/text_clean" />

    </LinearLayout>

    <ScrollView style="@style/ScrollView_Style">

        <LinearLayout style="@style/linearLayoutStyle">

            <LinearLayout style="@style/linearLayoutStyle">

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/project_name_edittext" />

                    <EditText
                        android:id="@+id/usecase_project_edittext"
                        style="@style/EditText_Style"
                        android:hint="@string/input_project_name" />
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/usecase_id" />

                    <EditText
                        android:id="@+id/usecase_id_edittext"
                        style="@style/EditText_Style"
                        android:hint="@string/input_usecase_id" />
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/usecase_program_number" />

                    <EditText
                        android:id="@+id/usecase_program_number"
                        style="@style/EditText_Style"
                        android:hint="@string/input_usecase_program_number" />
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/usecase_tester" />

                    <EditText
                        android:id="@+id/usecase_tester"
                        style="@style/EditText_Style"
                        android:hint="@string/input_name" />
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/usecase_developer" />

                    <EditText
                        android:id="@+id/usecase_developer"
                        style="@style/EditText_Style"
                        android:hint="@string/input_name" />
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/usecase_formation_time" />

                    <TextView
                        android:id="@+id/usecase_begin_time_button"
                        style="@style/Text_view_Style"
                        android:text="@string/project_begin_time_textview" />

                    <TextView
                        style="@style/Text_Style"
                        android:text="@string/text" />

                    <TextView
                        android:id="@+id/usecase_end_time_button"
                        style="@style/Text_view_Style"
                        android:text="@string/project_end_time_textview" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/usecase_search_button"
        style="@style/SearchButton" />

</LinearLayout>
