<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Parent_LayoutStyle"
    tools:context=".projectManager.PMAdressBook.ProjectManagerSearchFragment">

    <ScrollView
        style="@style/ScrollView_Style">

        <LinearLayout
            style="@style/linearLayoutStyle">

            <LinearLayout
                style="@style/Toptitle_LayoutStyle">

                <TextView
                    style="@style/toptextview_left"
                    android:text="@string/text_return"/>

                <TextView
                    style="@style/toptextview_center"
                    android:text="@string/project_choose"/>

                <TextView
                    style="@style/topview_right"
                    android:text="@string/text_clean"/>

            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutStyle">

                <LinearLayout
                    style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/project_name_edittext" />

                    <EditText
                        android:id="@+id/pm_name_edittext"
                        style="@style/EditText_Style"
                        android:hint="@string/input_project_name"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/plan_create_time" />

                    <TextView
                        android:id="@+id/pm_begin_time_button"
                        style="@style/Text_view_Style"
                        android:text="@string/project_begin_time_textview" />

                    <TextView
                        style="@style/Text_Style"
                        android:text="@string/text" />

                    <TextView
                        android:id="@+id/pm_end_time_button"
                        style="@style/Text_view_Style"
                        android:text="@string/project_end_time_textview" />

                </LinearLayout>

                <LinearLayout
                    style="@style/Viewline_LayoutStyle">

                    <TextView
                        android:id="@+id/project_manager_textview"
                        style="@style/Text_view_Style"
                        android:text="@string/project_manager_edittext" />

                    <EditText
                        android:id="@+id/pm_manager_edittext"
                        style="@style/EditText_Style"
                        android:hint="@string/input_name"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/project_mission_state" />

                    <Spinner
                        android:id="@+id/pm_state_sprinner"
                        style="@style/Spinner_Style" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/project_manager_search_button"
        style="@style/SearchButton" />

</LinearLayout>
