<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Parent_LayoutStyle">

    <ScrollView
        style="@style/ScrollView_Style">

        <LinearLayout
            style="@style/linearLayoutStyle">

            <LinearLayout
                style="@style/Toptitle_LayoutStyle">

                <TextView
                    style="@style/toptextview_left"
                    android:text="@string/text_return"/>

                <TextView
                    style="@style/toptextview_center"
                    android:text="@string/memo_choose"/>

                <TextView
                    style="@style/topview_right"
                    android:text="@string/text_clean"/>

            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutStyle">

                <LinearLayout
                    style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/memo_title_textview" />

                    <EditText
                        android:id="@+id/my_memo_title_edittext"
                        android:hint="@string/input_memo_title"
                        style="@style/EditText_Style"/>

                </LinearLayout>
                <LinearLayout
                    style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/submit_time" />

                    <TextView
                        android:id="@+id/memo_submit_begin_time_button"
                        style="@style/Text_view_Style"
                        android:text="@string/project_begin_time_textview" />

                    <TextView
                        style="@style/Text_Style"
                        android:text="@string/text" />

                    <TextView
                        android:id="@+id/memo_submit_end_time_button"
                        style="@style/Text_view_Style"
                        android:text="@string/project_end_time_textview" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/my_memo_search_button"
        style="@style/SearchButton" />

</LinearLayout>
