<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Parent_LayoutStyle"
    tools:context=".mission.publicSearchMission.PlanFragment">

    <LinearLayout style="@style/Toptitle_LayoutStyle">

        <TextView
            style="@style/toptextview_left"
            android:text="@string/text_return" />

        <TextView
            style="@style/toptextview_center"
            android:text="@string/project_choose" />

        <TextView
            style="@style/topview_right"
            android:text="@string/text_clean" />

    </LinearLayout>

    <ScrollView style="@style/ScrollView_Style">

        <LinearLayout style="@style/linearLayoutStyle">

            <LinearLayout style="@style/linearLayoutStyle">

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        android:id="@+id/plan_project_name_textview"
                        style="@style/Text_view_Style"
                        android:text="@string/project_name_edittext" />

                    <EditText
                        android:id="@+id/project_plan_name_edittext"
                        style="@style/EditText_Style"
                        android:hint="@string/input_project_name" />
                </LinearLayout>

                <!--安排人员-->
                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        android:id="@+id/plan_manager_name_textview"
                        style="@style/Text_view_Style"
                        android:text="@string/plan_manager_name_edittext" />

                    <EditText
                        android:id="@+id/project_plan_manager_name_edittext"
                        style="@style/EditText_Style"
                        android:hint="@string/input_name" />
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        android:id="@+id/project_plan_priority_textview"
                        style="@style/Text_view_Style"
                        android:text="@string/project_mission_priority" />

                    <Spinner
                        android:id="@+id/project_plan_priority_sprinner"
                        style="@style/Spinner_Style">

                    </Spinner>
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        android:id="@+id/project_mission_state_textview"
                        style="@style/Text_view_Style"
                        android:text="@string/project_mission_state" />

                    <Spinner
                        android:id="@+id/project_mission_state_sprinner"
                        style="@style/Spinner_Style">

                    </Spinner>
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        android:id="@+id/plan_create_time_textview"
                        style="@style/Text_view_Style"
                        android:text="@string/plan_create_time" />

                    <TextView
                        android:id="@+id/project_mission_begin_time_button"
                        style="@style/Text_view_Style"
                        android:text="@string/project_begin_time_textview" />

                    <TextView
                        style="@style/Text_Style"
                        android:text="@string/text" />

                    <TextView
                        android:id="@+id/project_mission_end_time_button"
                        style="@style/Text_view_Style"
                        android:text="@string/project_end_time_textview" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/plan_search_button"
        style="@style/SearchButton" />

</LinearLayout>
