<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Parent_LayoutStyle">

    <LinearLayout style="@style/Toptitle_LayoutStyle">

        <TextView
            android:id="@+id/fragment_travel_add_back"
            style="@style/toptextview_left"
            android:text="@string/text_return" />

        <TextView
            style="@style/toptextview_center"
            android:text="@string/travel_add" />

        <TextView
            android:id="@+id/fragment_travel_add_add"
            style="@style/topview_right"
            android:text="@string/add" />

    </LinearLayout>

    <ScrollView style="@style/ScrollView_Style">

        <LinearLayout style="@style/linearLayoutStyle">

            <LinearLayout style="@style/linearLayoutStyle">

                <LinearLayout
                    android:id="@+id/fragment_travel_nameEditText"
                    style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/employer_name" />

                    <Spinner
                        android:id="@+id/fragment_travel_memName"
                        style="@style/Spinner_Style" />

                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/employer_travel_time" />

                    <TextView
                        android:id="@+id/fragment_travel_beginTime"
                        style="@style/Text_view_Style"
                        android:text="@string/select_time" />

                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/employer_back_time" />

                    <TextView
                        android:id="@+id/fragment_travel_endTime"
                        style="@style/Text_view_Style"
                        android:text="@string/select_time" />

                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/employer_travel_add" />

                    <EditText
                        android:id="@+id/fragment_travel_address"
                        style="@style/EditText_Style"
                        android:hint="@string/input_location" />
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <TextView
                        style="@style/Text_view_Style"
                        android:text="@string/employer_travel_address" />

                    <EditText
                        android:id="@+id/fragment_travel_detail_addr"
                        style="@style/EditText_Style"
                        android:hint="@string/input_detail_location" />
                </LinearLayout>

                <LinearLayout style="@style/Viewline_LayoutStyle">

                    <LinearLayout
                        style="@style/Viewline_LayoutStyle"
                        android:layout_height="150dp">

                        <EditText
                            android:id="@+id/fragment_travel_reason"
                            style="@style/EditText_Style"
                            android:hint="@string/input_travel_reason" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
