<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Parent_LayoutStyle">

    <LinearLayout style="@style/Toptitle_LayoutStyle">

        <TextView
            android:id="@+id/pm_task_add_back"
            style="@style/toptextview_left"
            android:text="@string/text_return" />

        <TextView
            style="@style/toptextview_center"
            android:text="@string/mission_add" />

        <TextView
            android:id="@+id/pm_task_add_save"
            style="@style/topview_right"
            android:text="@string/save" />

    </LinearLayout>

    <ScrollView style="@style/ScrollView_Style">

        <LinearLayout style="@style/linearLayoutStyle">

            <!--项目名称-->
            <LinearLayout style="@style/Viewline_LayoutStyle">

                <TextView
                    style="@style/Text_view_Style"
                    android:text="@string/project_name_edittext" />

                <Spinner
                    android:id="@+id/pm_task_add_projectName"
                    style="@style/Spinner_Style" />

            </LinearLayout>

            <!--任务名称-->
            <LinearLayout style="@style/Viewline_LayoutStyle">

                <TextView
                    style="@style/Text_view_Style"
                    android:text="@string/my_mission_name" />

                <EditText
                    android:id="@+id/pm_task_add_missionName"
                    style="@style/EditText_Style"
                    android:hint="@string/input_mission_name" />

            </LinearLayout>

            <!--任务内容-->
            <LinearLayout style="@style/Viewline_LayoutStyle">

                <TextView
                    style="@style/Text_view_Style"
                    android:text="@string/mission_content" />

                <EditText
                    android:id="@+id/pm_task_add_missionContent"
                    style="@style/EditText_Style"
                    android:hint="@string/input_mission_content" />

            </LinearLayout>

            <!--成员名-->
            <LinearLayout style="@style/Viewline_LayoutStyle">

                <TextView
                    style="@style/Text_view_Style"
                    android:text="@string/mission_member" />

                <Spinner
                    android:id="@+id/pm_task_add_memberName"
                    style="@style/Spinner_Style" />

            </LinearLayout>

            <!--开始时间-->
            <LinearLayout style="@style/Viewline_LayoutStyle">

                <TextView
                    style="@style/Text_view_Style"
                    android:text="@string/mission_begin_time" />

                <TextView
                    android:id="@+id/pm_task_add_beginTime"
                    style="@style/Text_view_Style"
                    android:text="@string/mission_begin_time" />

            </LinearLayout>

            <!--开始时间-->
            <LinearLayout style="@style/Viewline_LayoutStyle">

                <TextView
                    style="@style/Text_view_Style"
                    android:text="@string/mission_end_time" />

                <TextView
                    android:id="@+id/pm_task_add_endTime"
                    style="@style/Text_view_Style"
                    android:text="@string/mission_end_time" />

            </LinearLayout>

            <!--状态-->
            <LinearLayout style="@style/Viewline_LayoutStyle">

                <TextView
                    style="@style/Text_view_Style"
                    android:text="@string/mission_state" />

                <Spinner
                    android:id="@+id/pm_task_add_missionState"
                    style="@style/Spinner_Style" />

            </LinearLayout>

            <!--状态-->
            <LinearLayout style="@style/Viewline_LayoutStyle">

                <LinearLayout
                    style="@style/Viewline_LayoutStyle"
                    android:layout_height="150dp">

                    <EditText
                        android:id="@+id/pm_task_add_evaluate"
                        style="@style/EditText_Style"
                        android:hint="@string/input_evaluate" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>