<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_my_memo"
    style="@style/CardView_LayoutStyle">

    <LinearLayout style="@style/linearLayoutStyle">

        <LinearLayout style="@style/CardView_Viewline_LayoutStyle">

            <TextView
                style="@style/Text_view_Style"
                android:text="@string/memo_title" />

            <TextView
                android:id="@+id/memo_title_textview"
                style="@style/Text_view_Style"
                android:layout_width="180dp"
                android:text="@string/memo_title_textview" />

            <TextView
                android:id="@+id/memo_date_textview"
                style="@style/Text_view_Style"
                android:text="@string/memo_date_textview" />
        </LinearLayout>

        <LinearLayout style="@style/CardView_Viewline_LayoutStyle">

            <TextView
                style="@style/Text_view_Style"
                android:text="@string/memo_content" />

            <TextView
                android:id="@+id/memo_content_textview"
                style="@style/Text_view_Style"
                android:maxLength="15"
                android:text="@string/memo_content" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>